@@ -29,6 +29,7 @@
     "@willsofts/will-serv": "^1.0.56",
     "@willsofts/will-sql": "^1.0.35",
     "@willsofts/will-util": "^1.0.26",
+    "amqplib": "^0.10.7",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "config": "^3.3.12",
@@ -37,9 +38,11 @@
     "express-session": "^1.18.1",
     "fast-xml-parser": "^4.5.1",
     "helmet": "^8.0.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "kafka-node": "^5.0.0",
     "mailparser": "^3.7.2",
     "mime-types": "^2.1.35",
     "moleculer": "^0.14.35",
@@ -51,6 +54,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
     "n-readlines": "^1.0.1",
+    "nats": "^2.29.3",
     "node-fetch": "^3.3.2",
     "node-imap": "^0.9.6",
     "node-rsa": "^1.1.1",
