@@ -9,4 +9,5 @@ a.key-link { margin-bottom: 5px; }
 .del-linker { padding-left: 5px; }
 #connectsettinginfo_label { font-size: 0.9rem; }
 #connectbodyinfo_label { font-size: 0.9rem; }
+#shareflagbox { margin-top: 35px; }
 /*#(10000) programmer code end;*/
